Changelog
=========

2.0.10 - Unreleased
-------------------


2.0.9 - 2011-05-12
------------------

- Make ``getNavigationRoot`` behave correctly in ``INavigationRoot``-folders
  where a ``relativeRoot`` is specified.
  This fixes http://dev.plone.org/plone/ticket/8787
  [WouterVH]


2.0.8 - 2011-04-01
------------------

- Enable managing portlets of default pages.
  This fixes http://dev.plone.org/plone/ticket/10672
  [fRiSi]


2.0.7 - 2011-02-25
------------------

- Do not show personaltools if there aren't any user actions.
  This fixes http://dev.plone.org/plone/ticket/11460
  [fRiSi]

- Fixed i18n of the "Log in to add comments" button. It was a regression
  since 2.0. This fixes http://dev.plone.org/plone/ticket/11525
  [vincentfretin]


2.0.6 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- Avoid creating persistent DiscussionItemContainers prematurely when items
  are viewed that have commenting enabled but no actual comments yet.
  [davisagli]

- Don't cache navigation_root_path and navigation_root_url contextless
  http://dev.plone.org/plone/ticket/11291
  [tom_gross]

- Add ids to links personal_bar when rendered as anonymous so they can be
  styled. This makes behavior consistent with the authenticated personal_bar.
  http://dev.plone.org/plone/ticket/10850
  [eleddy]


2.0.5 - 2010-11-15
------------------

- Fix presentation view when headings have HTML attributes (such as headings
  translated from reStructured Text). This fixes
  http://dev.plone.org/plone/ticket/10689
  [davisagli]

- Removed unnecessary memoization of the presentation view; turned its tests
  into unit tests.
  [davisagli]

- XHTML 1.0 Strict searchbox.pt.
  This fixes http://dev.plone.org/plone/ticket/11007
  [kiorky]


2.0.4 - 2010-09-28
------------------

- Fixed @@plone_context_state.view_template_id handling of content that does
  not implement IBrowserDefault (Products.CMFDynamicViewFTI). It was possible