@@ -4,6 +4,10 @@ Changelog
 2.0.10 - Unreleased
 -------------------
 
+ - Use getPhysicalPath instead of absolute_url_path to handle correctly
+   virtual hosting.
+  This fixes http://dev.plone.org/plone/ticket/8787
+  [encolpe]
 
 2.0.9 - 2011-05-12
 ------------------
